# equiconc

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  codecov.yml  deny.toml  justfile  mkdocs.yml  pyproject.toml
.cargo/: config.toml
.forgejo/workflows/: builds.yml
.github/: dependabot.yml
.github/workflows/: builds.yml  coverage.yml  docs.yml
benches/: equilibrium.rs  vs_coffee.rs  vs_coffee_large.rs
docs/: api.md  getting-started.md  index.md  theory.md
docs/javascripts/: mathjax.js
docs/notebooks/: competitive_binding.ipynb  quickstart.ipynb
equiconc/: __init__.py  __init__.pyi
examples/: instrument_large.rs  instrument_xl.rs
src/: io.rs  lib.rs  python.rs  simd_kernels.rs  water.rs
tests/: coffee_cli_compat.rs  proptest_equiconc.proptest-regressions  proptest_equiconc.rs  proptest_vs_coffee.proptest-regressions  proptest_vs_coffee.rs  test_equiconc.py  test_properties.py  test_type_stubs.py  test_vs_nupack.py
tests/coffee_vendor/: extras.rs  format.rs  mod.rs  optimize.rs  steihaug.rs
web/: Cargo.toml  Trunk.toml  index.html  style.css
web/src/: app.rs  charts.rs  exports.rs  inputs.rs  lib.rs  main.rs  options.rs  outputs.rs  solver.rs  state.rs  testcases.rs  wire.rs  worker.rs  worker_bin.rs  worker_handle.rs
web/testcases/: a_homo.con  a_homo.ocx  ab_dimer.con  ab_dimer.ocx  abc_competing.con  abc_competing.ocx
web/tests/: numeric_regression.rs
