[package]
name = "equiconc"
version = "0.1.0"
edition = "2024"
description = "Equilibrium concentration solver"
license = "BSD-3-Clause AND Apache-2.0"
repository = "https://github.com/cgevans/equiconc"
documentation = "https://cgevans.github.io/equiconc"
authors = ["Constantine Evans <equiconc@mb.costi.net>"]
keywords = ["equilibrium", "nucleic-acid", "thermodynamics", "DNA", "RNA"]
categories = ["science"]
readme = "README.md"
exclude = [
    ".claude/",
    "CLAUDE.md",
    "analysis-*.md",
    "coffee.pdf",
    "coffee-*.md",
    "coffee-*.pdf",
    "config-research.md",
    "lower-level-*.md",
    "nupack-*.whl",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.16"
pyo3 = { version = "0.28", optional = true, features = ["extension-module", "abi3-py310"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[features]
default = []
python = ["pyo3"]

[[bench]]
name = "equilibrium"
harness = false

[[bench]]
name = "vs_coffee"
harness = false

[[bench]]
name = "vs_coffee_large"
harness = false
