[package]
name = "equiconc"
version = "0.3.0"
edition = "2024"
description = "Equilibrium concentration solver"
license = "BSD-3-Clause"
repository = "https://github.com/cgevans/equiconc"
documentation = "https://cgevans.github.io/equiconc"
authors = ["Constantine Evans <equiconc@mb.costi.net>"]
keywords = ["equilibrium", "nucleic-acid", "thermodynamics", "DNA", "RNA"]
categories = ["science"]
readme = "README.md"
exclude = [
    ".claude/",
    "CLAUDE.md",
    "analysis-*.md",
    "coffee.pdf",
    "coffee-*.md",
    "coffee-*.pdf",
    "config-research.md",
    "lower-level-*.md",
    "nupack-*.whl",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.17"
pulp = { version = "0.22", optional = true }
pyo3 = { version = "0.28", optional = true, features = ["extension-module", "abi3-py310"] }
clap = { version = "4", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"
# COFFEE optimizer for comparative benchmarks. Pinned to cgevans' fork,
# which gates the `polars`-backed file-input path behind a feature so
# `default-features = false` avoids pulling polars (its heaviest dep) into
# the dev build. The repo has no root/workspace Cargo.toml, but Cargo's
# git-dependency resolver finds the `coffee` package at crates/coffee/ by
# scanning manifests. COFFEE and equiconc both track ndarray 0.17 now, so
# no version aliasing is needed.
coffee = { git = "https://github.com/cgevans/coffee", rev = "6fdcd67a5e50a306b038c22f4e4d7547c1668261", default-features = false }

[features]
default = ["simd"]
python = ["pyo3"]
coffee-cli = ["dep:clap"]
# Vectorize the per-species element-wise hot loops in evaluate_into and
# evaluate_log_into via `pulp` (runtime-dispatch SIMD). Default-on; opt
# out with `--no-default-features` to fall back to the scalar libm path.
simd = ["dep:pulp"]

[[bin]]
name = "equiconc-coffee-cli"
path = "src/bin/equiconc_coffee_cli.rs"
required-features = ["coffee-cli"]

[[bench]]
name = "equilibrium"
harness = false

[[bench]]
name = "vs_coffee"
harness = false

[[bench]]
name = "vs_coffee_large"
harness = false
