[build-system]
requires = ["maturin>=1.0,<2"]
build-backend = "maturin"

[project]
name = "equiconc"
version = "0.1.0"
requires-python = ">=3.10"

[tool.maturin]
features = ["python"]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "ipykernel>=6.31.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pytest>=9.0",
    "pytest-cov>=6.0",
]
docs = [
    "zensical>=0.0.24",
    "mkdocstrings[python]>=0.24",
    "nbconvert>=7.0",
]
