[build-system]
requires = ["maturin>=1.0,<2"]
build-backend = "maturin"

[project]
name = "equiconc"
version = "0.1.0"
requires-python = ">=3.10"
description = "Equilibrium concentration solver"
license = "BSD-3-Clause"
authors = [{ name = "Constantine Evans", email = "equiconc@mb.costi.net" }]
readme = "README.md"
keywords = ["equilibrium", "nucleic-acid", "thermodynamics", "DNA", "RNA"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/cgevans/equiconc"
Documentation = "https://cgevans.github.io/equiconc"

[tool.maturin]
features = ["python"]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "ipykernel>=6.31.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.9",
    "maturin>=1.12.6",
    "numpy>=2.0",
    "pytest>=9.0",
    "pytest-cov>=6.0",
]
docs = [
    "zensical>=0.0.24",
    "mkdocstrings[python]>=0.24",
    "nbconvert>=7.0",
]
