[build-system]
requires = ["maturin>=1.0,<2"]
build-backend = "maturin"

[project]
name = "equiconc"
# Version is sourced from Cargo.toml by maturin so a single bump there
# propagates to both the Rust crate and the Python wheel; previous
# releases drifted (pyproject.toml stuck on 0.3.0 while Cargo.toml
# moved to 0.4.0), which collided with the 0.3.0 record on PyPI and
# blocked the 0.4.0 publish.
dynamic = ["version"]
requires-python = ">=3.10"
description = "Equilibrium concentration solver"
license = "BSD-3-Clause"
authors = [{ name = "Constantine Evans", email = "equiconc@mb.costi.net" }]
readme = "README.md"
keywords = ["equilibrium", "nucleic-acid", "thermodynamics", "DNA", "RNA"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://codeberg.org/cge/equiconc"
Repository = "https://codeberg.org/cge/equiconc"
Documentation = "https://cge.codeberg.page/equiconc/"

[tool.maturin]
features = ["python"]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "ipykernel>=6.31.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.9",
    "maturin>=1.12.6",
    "numpy>=2.0",
    "pytest>=9.0",
    "pytest-cov>=6.0",
]
docs = [
    "zensical>=0.0.24",
    "mkdocstrings[python]>=0.24",
    "nbconvert>=7.0",
]
